# TFHEtest

./: .gitmodules  CMakeLists.txt  README.md  build.sh  fftBuild.sh  hexl_build.sh
cmake/: extDep.cmake
doc/test_results/: fft_ntt_test.txt  ntt_test.txt
docs/tests/batch/: batch.txt
docs/tests/fpga/: fpga_test.txt
include/: INTorus.hpp  bfv++.hpp  blindrotate.hpp  c_assert.hpp  cloudkey.hpp  cuhe.hpp  decomposition.hpp  detwfa.hpp  externalproduct.hpp  fftfpga.h  gate.hpp  gate_ntt.hpp  gatebootstrapping.hpp  keyswitch.hpp  mulfft.hpp  mult_fft.hpp  mult_fft_fpga.hpp  mult_ntt.hpp  mult_ntt_cuhe.hpp  mult_ntt_hexl.hpp  params.hpp  raintt.hpp  tfhe++.hpp  tlwe.hpp  trgsw.hpp  trlwe.hpp  utils.hpp  utils2.hpp
include/externs/: cloudkey.hpp  detwfa.hpp  gate.hpp  trgsw.hpp
include/params/: 128bit.hpp  hexl_params.hpp
ntt_test/: and_gate_fft.cpp  and_gate_ntt.cpp  cereal.cpp  encrypt.cpp  encryptOne.cpp  nandFft.cpp  nandLv2.cpp  nandNtt.cpp
src/: CMakeLists.txt  cloudkey.cpp  detwfa.cpp  gate.cpp  trgsw.cpp
test/: CMakeLists.txt  INTorus.cpp  encryptDecryptOne.cpp  externalproduct.cpp  externalproductntt.cpp  externalproductraintt.cpp  fft_ntt_test.cpp  gate.cpp  gatebootstrapping.cpp  gatebootstrappingntt.cpp  gatebootstrappingtlwe2tlweraintt.cpp  mult_test.cpp  my_assert.h  nand.cpp  ntt_test.cpp  polymul.cpp
thirdparties/fftfpga/: CMakeLists.txt  fft1d.c
thirdparties/fftw/: CMakeLists.txt  fft_processor_fftw.cpp  fft_processor_fftw.h
thirdparties/fpga/: CMakeLists.txt  fft_processor_fpga.cpp  fft_processor_fpga.h  fpga.cpp  fpga.h
thirdparties/fpga/libs/aocx/: fft1d.aocx  fft1d_emulator.aocx
thirdparties/fpgaproc/: CMakeLists.txt  fft_processor_fpga.cpp  fftfpga.c  fpga.cpp  fpga.h  opencl_utils.c
thirdparties/randen/: randen.cc  vector128.h
thirdparties/spqlios/: CMakeLists.txt  fft_processor_spqlios.cpp  fft_processor_spqlios.h
tutorial/: CMakeLists.txt  cloud.cpp  verify.cpp
unit_test/batch/: fft_batch_test.cpp  fft_indiv_test.cpp
unit_test/decomposition/: CMakeLists.txt  offsetgen.cpp
unit_test/encrypt/: encrypt.cpp  encryptZero.cpp
unit_test/externalproduct/: CMakeLists.txt  externalproduct.cpp  lvl1Externalproduct.cpp  lvl1Externalproduct_1.cpp  lvl2Externalproduct.cpp  lvl2Externalproduct_1.cpp
unit_test/fft/: fft_test.cpp  mult_test.cpp
unit_test/fpga/: fft_fpga_test.cpp  fpga_test.cpp  fpga_test.h
unit_test/gate/: and_gate.cpp  and_gate_fft.cpp  and_gate_ntt.cpp  gate.cpp  nand.cpp
unit_test/ntt/: cereal1.cpp  fft_ntt_test.cpp  mult_fpga_test.cpp  ntt_test.cpp  raintt.cpp
unit_test/other/: CMakeLists.txt  INTorus.cpp  cereal.cpp  polymul.cpp
unit_test/test/: CMakeLists.txt
unit_test/test_results/poly_multiplication/: mult_test.txt
unit_test/tutorial/: README.md  client.cpp
